--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,17 +56,16 @@ input, textarea{
 
 .label-file {
     cursor: pointer;
-    color: #00b1ca;
+	color: #fff;
+	background: #00b1ca;
 	font-weight: bold;
 	font-size: 4rem;
 	border: 2px solid #00b1ca;
 	border-radius: 100%;
 	padding: 10px 40px;
-	margin-top: 50px;
+	margin-top: 20px;
 }
-.label-file:hover {
-    color: #25a5c4;
-}
+
 
 p {
 	margin-bottom: 0!important;
@@ -78,15 +77,20 @@ p {
 
 .formulaire {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
+}
+
+.popup {
+	margin-top: 20px;
 }
 
 .popup span {
 	border: 2px solid #25a5c4;
 	background: #eee;
 	top: 0;
-	position: absolute;
-	padding: 0 50px;
+	position: relative;
+	padding: 10px 50px;
 }
 
 .popup span::after {
