--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,11 @@ input, textarea{
 	margin-top: 20px;
 }
 
+.error {
+	color: rgb(189, 51, 51);
+	font-weight: bold;
+}
+
 
 p {
 	margin-bottom: 0!important;
