--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,250 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-a{
-	text-decoration: none;
-	outline:none
+a {
+  text-decoration: none;
+  outline: none;
 }
 
-input, textarea{
-	box-sizing: border-box;
+input,
+textarea {
+  box-sizing: border-box;
 }
 /***************************************/
 /***************END OF RESET************/
 /***************************************/
 
-.label-file {
-    cursor: pointer;
-	color: #fff;
-	background: #00b1ca;
-	font-weight: bold;
-	font-size: 4rem;
-	border: 2px solid #00b1ca;
-	border-radius: 100%;
-	padding: 10px 40px;
-	margin-top: 20px;
+#download{
+  text-align: center;
 }
 
 
+/* #file {
+  text-align: center;
+  box-shadow: inset -2px -1px 15px #73a2c0;
+  background: linear-gradient(top bottom, #74a2c0 5%, #73a3c0 100%);
+  background-color: #2e466e;
+  border-radius: 42px;
+  border: 1px solid #1f2f47;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 12px;
+  padding: 5px 21px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #263666;
+}
+
+#file:hover {
+  background: linear-gradient(to bottom, #415989 5%, #2e466e 100%);
+  background-color: #415989;
+}
+
+#file:active {
+  position: relative;
+  top: 1px;
+} */
+
+#submit {
+  box-shadow: inset -2px -1px 15px #25a5c4;
+  background: linear-gradient(top bottom, #2e466e 5%, #415989 100%);
+  background-color: #2e466e;
+  border-radius: 42px;
+  border: 1px solid #1f2f47;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 12px;
+  padding: 5px 21px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #263666;
+}
+
+#submit:hover {
+  background: linear-gradient(to bottom, #415989 5%, #2e466e 100%);
+  background-color: #415989;
+}
+
+#submit:active {
+  position: relative;
+  top: 1px;
+}
+
+#background {
+  margin: auto;
+  text-align: center;
+}
+
+.label-file {
+  cursor: pointer;
+  color: #fff;
+  background: #00b1ca;
+  font-weight: bold;
+  font-size: 4rem;
+  border: 2px solid #00b1ca;
+  border-radius: 100%;
+  padding: 10px 40px;
+  margin-top: 20px;
+}
+
 p {
-	margin-bottom: 0!important;
+  text-align: center;
+  margin-bottom: 0 !important;
 }
 
 .input-file {
-    display: none;
+  display: none;
 }
 
 .formulaire {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .popup {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .popup span {
-	border: 2px solid #25a5c4;
-	background: #eee;
-	top: 0;
-	position: relative;
-	padding: 10px 50px;
+  border: 2px solid #25a5c4;
+  background: #eee;
+  top: 0;
+  position: relative;
+  padding: 10px 50px;
 }
 
 .popup span::after {
-	content: "";
-	border-width: 8px;
-	border-style: solid;
-	border-color: #25a5c4 transparent transparent transparent;
-	position: absolute;
-	top: 100%;
-	left: 50%;
-	margin-left: -8px;
+  content: "";
+  border-width: 8px;
+  border-style: solid;
+  border-color: #25a5c4 transparent transparent transparent;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -8px;
 }
