--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,11 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Kulim Park', sans-serif;
+	background: linear-gradient(70deg, #7cd8e4, #0397aa, #1b7783) no-repeat;
+	
 }
+
 ol, ul {
 	list-style: none;
 }
@@ -50,30 +54,68 @@ a{
 input, textarea{
 	box-sizing: border-box;
 }
+
+.logo-z{
+	text-align: center;
+}
+
+.logo-z img {
+	width: 25%;
+	height: auto;
+
+}
 /***************************************/
 /***************END OF RESET************/
 /***************************************/
 
-.label-file {
-    cursor: pointer;
-	color: #fff;
-	background: #00b1ca;
-	font-weight: bold;
-	font-size: 4rem;
-	border: 2px solid #00b1ca;
-	border-radius: 100%;
-	padding: 10px 40px;
-	margin-top: 20px;
+/***************************************/
+/* NAVBAR */
+/***************************************/
+
+
+
+
+
+
+/***************************************/
+/* FORMULAIRE */
+/***************************************/
+
+
+
+.download-title {
+	text-transform: uppercase;
+	font-size: 1.4rem;
+	padding-left: 10px;
+	cursor: pointer;
+	transition: all .5s;
+}
+
+.download-title:hover {
+	color: #1ba7df;
+}
+
+.btn-download {
+	text-align: center;	
+}
+
+.content-download {
+	display: flex;
+	align-items: center;
+}
+
+label {
+	margin-bottom: 10px;
+}
+
+.label-file img {
+	cursor: pointer;
+	width: 50px;
 }
 
 .error {
 	color: rgb(189, 51, 51);
 	font-weight: bold;
-}
-
-
-p {
-	margin-bottom: 0!important;
 }
 
 .input-file {
@@ -90,4 +132,41 @@ p {
 	border: 1px solid #00b1ca;
 	border-radius: 20px;
 	padding: 20px;
+	background-color: #fff;
+}
+
+textarea {
+	resize: none;
+}
+
+.btn-submit {
+	background: #1ba7df;
+	color: #fff;
+	border: 1.5px solid #1ba7df;
+	transition: all .5s;
+	text-transform: uppercase;
+}
+
+.btn-submit:hover {
+	background: #fff;
+	border: 1.5px solid #1ba7df;
+	color: #1ba7df;
+}
+
+.container {
+	padding: 5% 0;
+}
+
+#submit {
+	margin-top: 20px;
+}
+
+/*************/
+/** FOOTER **/
+/*************/
+
+footer {
+	margin-top: 10px;
+	padding-bottom: 5px;
+	text-align: center;
 }
