--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,9 @@ textarea {
 /* NAVBAR */
 /***************************************/
 
-
+nav {
+	padding-top: 50px;
+}
 
 
 
@@ -162,7 +164,22 @@ textarea {
 /* FORMULAIRE */
 /***************************************/
 
+#fichiers {
+	text-align: center;
+	color: #22508b;
+}
 
+.cloud:first-child {
+	width: 100px;
+	position: absolute;
+	left: 0;
+}
+
+.cloud:nth-child(2) {
+	width: 100px;
+	position: absolute;
+	bottom: 0;
+}
 
 .download-title {
 	text-transform: uppercase;
@@ -283,6 +300,13 @@ hr{
   	border: 0; 
   	height: 1px; 
   	background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
+
+.success {
+	color: green;
+	text-align:center;
+	display: none;
+	font-size: 1.1rem;
 }
 
 /*************/
