--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,12 @@ label {
 
 .label-file img {
 	cursor: pointer;
-	width: 50px;
+  width: 50px;
+  transition: all .3s;
+}
+
+.label-file img:hover {
+  transform: scale(1.1);
 }
 
 .error {
